--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta http-equiv="X-FRAME-OPTIONS" content="DENY">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/favicon.ico" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
   <!-- Vendor CSS Files -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
