--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#index">Home</a></li>
-          <li class="active"><a href="#organizers">Organizers</a></li>
           <li><a href="#about">About the Summit</a></li>
+          <li class="active"><a href="#organizers">Organizers</a></li>
+          <li><a href="#about">Speakers</a></li>
           <li><a href="#programme">Program</a></li>
+          <li><a href="#contact">Partners</a></li>
           <li><a href="#contact">Contact Us</a></li>
           <li><a href="" target="_blank">Register</a></li>
         </ul>
@@ -69,7 +71,7 @@
           <!-- <br class="hidden-xs"> “Resilient Youth, Resilient Africa” -->
           <h2>16 - 17 September 2023 <br>Innovation Village | Ntinda Kampala</h2>
           <div class="d-lg-flex">
-            <a href="" class="btn-get-started" target="_blank">Register here</a>
+            <a href="https://bit.ly/3OR0G9j " class="btn-get-started" target="_blank">Register here</a>
           </div>
         </div>
       </div>
@@ -77,6 +79,64 @@
   </section>
 
   <main id="main">
+
+
+
+
+
+
+
+
+
+
+    <section id="about" class="about about-summit triangle_content">
+      <img src="img/imigongo.png" class="triangle_topLeft" />
+      <img src="img/imigongo.png" class="triangle_bottomRight" />
+      <div class="container" data-aos="fade-up">
+        <div class="section-title text-center mb-3">
+          <img src="img/title-bg11.png" alt="" class="img img-responsive">
+          <div class="title">
+            <h1><span>About the</span> Summit</h1>
+          </div>
+        </div>
+        <div class="row content">
+          <div class="col-lg-12">
+            <p>
+              The YouthMappers Leadership Fellowship Summit in Jamaica 2023 was a transformative moment, uniting global
+              youth mappers and professionals in open mapping and geospatial data. It's a catalyst for change, sparking
+              our ambition to host a parallel summit in Uganda. This replication aims to empower students who missed
+              Jamaica, sharing vital skills and knowledge, fostering global connections.
+            </p>
+            <p>
+              Our Ugandan summit bridges knowledge gaps by exposing young individuals to cutting-edge tools and
+              geospatial open mapping. Our goal: equip the next generation of mappers with skills to drive positive
+              change. As post-summit enrichment can be challenging, centralizing the event enhances inclusivity. This
+              united approach encourages all youth mappers to participate, fostering collaboration and shared growth.
+            </p>
+            <p>
+              From the impactful Jamaica summit to the upcoming Ugandan extension, unity and shared growth remain at the
+              core. We're dedicated to equipping youth mappers with tools, knowledge, and a collaborative spirit.
+              Centralizing in Uganda ensures accessibility for all, transcending geographical barriers. Together, we'll
+              continue our legacy of positive change on a global scale.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -245,7 +305,7 @@
 
 
 
-    <section id="speakers-sec" class="triangle_content bg-green">
+    <section id="speakers-sec" class="triangle_content bg-light-green">
       <img src="img/imigongo.png" class="triangle_topLeft" />
       <img src="img/imigongo.png" class="triangle_topRight" />
       <img src="img/imigongo.png" class="triangle_bottomLeft" />
@@ -255,7 +315,7 @@
         <div class="section-title text-center mb-3">
           <img src="img/title-bg11.png" alt="" class="img img-responsive">
           <div class="title">
-            <h1><span>Gold</span> Partners</h1>
+            <h1><span></span> Organizers</h1>
           </div>
         </div>
         <div class="row">
@@ -268,53 +328,57 @@
                   <p>Assistant Administrator and RBA Director, UNDP</p>
                 </div> -->
                 <div class="icon-box">
-                  <img src="img/partners/1.png" class="img img-responsive">
-                  <!-- <h4>Usha Rao-Monari</h4> -->
-                  <p>Soltech Digital Solutions</p>
+                  <img src="img/team/team1.png" class="img img-responsive">
+                  <h4>Event Coordinator</h4>
+                  <p>Financial Assistant Ministry of Finance</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/2.png" class="img img-responsive">
-                  <!-- <h4>Chae Jin-Weon</h4> -->
-                  <p>Binary Garage</p>
+                  <img src="img/team/team2.png" class="img img-responsive">
+                  <h4>Program Manager</h4>
+                  <p>Co-Founder Chimp Technologies</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/3.png" class="img img-responsive">
-                  <!-- <h4>Hon. Rosemary Mbabazi</h4> -->
-                  <p>The Innovation Village</p>
+                  <img src="img/team/team3.png" class="img img-responsive">
+                  <h4>Logistics Coordinator</h4>
+                  <p>CTO Qriscorp Uganda Limited</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/4.png" class="img img-responsive">
-                  <!-- <h4>Oulie Keita</h4> -->
-                  <p>Openstreetmap Uganda</p>
+                  <img src="img/team/team4.png" class="img img-responsive">
+                  <h4>Communication Officer</h4>
+                  <p>Ex-Pesident Gulu Chapter/ Software Developer</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/5.png" class="img img-responsive">
-                  <!-- <h4>Chido Mpemba</h4> -->
-                  <p>Youthmappers</p>
+                  <img src="img/team/team5.png" class="img img-responsive">
+                  <h4>Sponsorship Manager</h4>
+                  <p>President KabU Youthmappers Chapter</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/6.png" class="img img-responsive">
-                  <!-- <h4>Ms. Lydia Zigomo</h4> -->
-                  <p>Chimp Technologies Limited</p>
+                  <img src="img/team/team6.png" class="img img-responsive">
+                  <h4>Registration Lead</h4>
+                  <p>Outgoing VP Kyambogo YouthMappers Chapter</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/1.png" class="img img-responsive">
-                  <!-- <h4>Maxime Houinato</h4> -->
-                  <p>Soltech Digital Solutions</p>
+                  <img src="img/team/team7.png" class="img img-responsive">
+                  <h4>Design and Branding Lead</h4>
+                  <p>Software Developer (Design and Implementation)</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/2.png" class="img img-responsive">
-                  <!-- <h4>Maxwell Gomera</h4> -->
-                  <p>Binary Garage</p>
+                  <img src="img/team/team8.png" class="img img-responsive">
+                  <h4>Volunteer Coordinator</h4>
+                  <p>Teaching Assistant Kabale University</p>
                 </div>
-
+                <div class="icon-box">
+                  <img src="img/team/team9.png" class="img img-responsive">
+                  <h4>Technical Support Lead</h4>
+                  <p>Land surveyor and Geomatics Engineer</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-12 text-center mt-3" data-aos="zoom-in" data-aos-delay="500">
+        <!-- <div class="col-lg-12 text-center mt-3" data-aos="zoom-in" data-aos-delay="500">
           <a href="speakers" class="project_btn">More partners</a>
-        </div>
+        </div> -->
       </div>
       </div>
     </section>
@@ -465,40 +529,7 @@
       </div>
     </section>
 
-    <section id="about" class="about about-summit triangle_content">
-      <img src="img/imigongo.png" class="triangle_topLeft" />
-      <img src="img/imigongo.png" class="triangle_bottomRight" />
-      <div class="container" data-aos="fade-up">
-        <div class="section-title text-center mb-3">
-          <img src="img/title-bg11.png" alt="" class="img img-responsive">
-          <div class="title">
-            <h1><span>About the</span> Summit</h1>
-          </div>
-        </div>
-        <div class="row content">
-          <div class="col-lg-12">
-            <p>
-              The YouthMappers Leadership Fellowship Summit in Jamaica 2023 was a transformative moment, uniting global
-              youth mappers and professionals in open mapping and geospatial data. It's a catalyst for change, sparking
-              our ambition to host a parallel summit in Uganda. This replication aims to empower students who missed
-              Jamaica, sharing vital skills and knowledge, fostering global connections.
-            </p>
-            <p>
-              Our Ugandan summit bridges knowledge gaps by exposing young individuals to cutting-edge tools and
-              geospatial open mapping. Our goal: equip the next generation of mappers with skills to drive positive
-              change. As post-summit enrichment can be challenging, centralizing the event enhances inclusivity. This
-              united approach encourages all youth mappers to participate, fostering collaboration and shared growth.
-            </p>
-            <p>
-              From the impactful Jamaica summit to the upcoming Ugandan extension, unity and shared growth remain at the
-              core. We're dedicated to equipping youth mappers with tools, knowledge, and a collaborative spirit.
-              Centralizing in Uganda ensures accessibility for all, transcending geographical barriers. Together, we'll
-              continue our legacy of positive change on a global scale.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+
 
     <section id="about" class="about who-attend triangle_content bg-orange">
       <img src="img/imigongo.png" class="triangle_topLeft" />
@@ -556,7 +587,8 @@
                   <li><i class="ri-check-double-line"></i> Collaborative Projects Idea formulation.</li>
                   <li><i class="ri-check-double-line"></i> Mentorship Programs.</li>
                   <li><i class="ri-check-double-line"></i> Presentations and Panel Discussions.</li>
-                  <li><i class="ri-check-double-line"></i> Tree Planting (Youthmappers will plant 100, fruit trees in KCCA Gazetted areas in
+                  <li><i class="ri-check-double-line"></i> Tree Planting (Youthmappers will plant 100, fruit trees in
+                    KCCA Gazetted areas in
                     Kampala)</li>
                   <li><i class="ri-check-double-line"></i> Field work Mapping Session.</li>
                 </ul>
@@ -573,13 +605,19 @@
             <div class="row content" style="padding: 0 30px;" data-aos="fade-up">
               <div class="col-lg-12">
                 <ul>
-                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Enhanced Technical Skills in Open Mapping.</span></li>
-                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Increased unity and solidarity.</span></li>
-                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Empowered Youth Leaders.</span></li>
-                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Collaborative Mapping Projects.</span></li>
-                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Collaborative Mapping Projects.</span></li>
+                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Enhanced Technical Skills in Open
+                      Mapping.</span></li>
+                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Increased unity and
+                      solidarity.</span></li>
+                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Empowered Youth Leaders.</span>
+                  </li>
+                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Collaborative Mapping
+                      Projects.</span></li>
+                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Collaborative Mapping
+                      Projects.</span></li>
                   <li><i class="ri-check-double-line"></i> <span style="color: white;">Expanded Network.</span></li>
-                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Local Capacity Building.</span></li>
+                  <li><i class="ri-check-double-line"></i> <span style="color: white;">Local Capacity Building.</span>
+                  </li>
                   <li><i class="ri-check-double-line"></i> <span style="color: white;">Community Engagement.</span></li>
                 </ul>
               </div>
@@ -866,7 +904,7 @@
                   </div>
                 </div>
               </div>
-              
+
 
               <div id="two" class="daycontent program-two">
                 <!-- <div class="prog-border row">
@@ -2286,7 +2324,7 @@
         <div class="section-title text-center mb-3">
           <img src="img/title-bg2.png" alt="" class="img img-responsive">
           <div class="title">
-            <h1>Our partners</h1>
+            <h1>Our Gold partners</h1>
           </div>
         </div>
         <div class="row">
@@ -2294,58 +2332,44 @@
             <div class="row">
               <div id="partners" class="owl-carousel owl-theme">
                 <div class="icon-box">
-                  <img src="img/partners/GoR-01.jpg" class="img img-responsive">
+                  <img src="img/partners/1.png" class="img img-responsive">
+                  <!-- <h4>Usha Rao-Monari</h4> -->
+                  <p style="color: white;">Soltech Digital Solutions</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/YCA-01.jpg" class="img img-responsive">
+                  <img src="img/partners/2.png" class="img img-responsive">
+                  <!-- <h4>Chae Jin-Weon</h4> -->
+                  <p style="color: white;">SoltechBinary Garage</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/UNDP-01.jpg" class="img img-responsive">
+                  <img src="img/partners/3.png" class="img img-responsive">
+                  <!-- <h4>Hon. Rosemary Mbabazi</h4> -->
+                  <p style="color: white;">SoltechThe Innovation Village</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/Koica-01.jpg" class="img img-responsive">
+                  <img src="img/partners/4.png" class="img img-responsive">
+                  <!-- <h4>Oulie Keita</h4> -->
+                  <p style="color: white;">SoltechOpenstreetmap Uganda</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/MASTERCARD-01.jpg" class="img img-responsive">
+                  <img src="img/partners/5.png" class="img img-responsive">
+                  <!-- <h4>Chido Mpemba</h4> -->
+                  <p style="color: white;">SoltechYouthmappers</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/AFBD-01.jpg" class="img img-responsive">
+                  <img src="img/partners/6.png" class="img img-responsive">
+                  <!-- <h4>Ms. Lydia Zigomo</h4> -->
+                  <p style="color: white;">SoltechChimp Technologies Limited</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/UNICEF-02.jpg" class="img img-responsive">
+                  <img src="img/partners/1.png" class="img img-responsive">
+                  <!-- <h4>Maxime Houinato</h4> -->
+                  <p style="color: white;">SoltechSoltech Digital Solutions</p>
                 </div>
                 <div class="icon-box">
-                  <img src="img/partners/UNFPA-07.jpg" class="img img-responsive">
-                </div>
-                <div class="icon-box">
-                  <img src="img/partners/FAO-01.jpg" class="img img-responsive">
-                </div>
-                <div class="icon-box">
-                  <img src="img/partners/CRS-01.jpg" class="img img-responsive">
-                </div>
-                <div class="icon-box">
-                  <img src="img/partners/UN WOMEN.jpg" class="img img-responsive">
-                </div>
-                <div class="icon-box">
-                  <img src="img/partners/Imbuto.jpg" class="img img-responsive">
-                </div>
-                <div class="icon-box">
-                  <img src="img/partners/GenU.jpg" class="img img-responsive">
-                </div>
-                <div class="icon-box">
-                  <img src="img/partners/WHO.jpg" class="img img-responsive">
-                </div>
-                <div class="icon-box">
-                  <img src="img/partners/Ugandair.jpg" class="img img-responsive">
-                </div>
-                <div class="icon-box">
-                  <img src="img/partners/World Vision.jpg" class="img img-responsive">
-                </div>
-                <div class="icon-box">
-                  <img src="img/partners/SOS-01.jpg" class="img img-responsive">
-                </div>
-                <div class="icon-box">
-                  <img src="img/partners/Akazi Kanoze-09.jpg" class="img img-responsive">
+                  <img src="img/partners/2.png" class="img img-responsive">
+                  <!-- <h4>Maxwell Gomera</h4> -->
+                  <p style="color: white;">SoltechBinary Garage</p>
                 </div>
               </div>
             </div>
